--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,20 +1,24 @@
 # main links
 main:
-  #- title: "Quick-Start Guide"
-  #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-#  - title: "스프링"
-#    sublinks:
-#      - title: "기초"
-#        url: /spring-base/
-#      - title: "오류"
-#        url: /spring-error/
+  - title: "Quick-Start Guide"
+    url: "https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/"
+    children:
+      - title: "테스트"
+        url: "/test/"
+  - title: "스프링"
+    url: "https://seungryeolpark.github.io/categories/"
+    children:
+      - title: "기초"
+        url: "/spring-base/"
+      - title: "오류"
+        url: "/spring-error/"
 #  - title: "취업준비"
 #    url: /jobPreparation/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+#   - title: "About"
+#     url: https://mmistakes.github.io/minimal-mistakes/about/
+#   - title: "Sample Posts"
+#     url: /year-archive/
+#   - title: "Sample Collections"
+#     url: /collection-archive/
+#   - title: "Sitemap"
+#     url: /sitemap/
