--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,17 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: "https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/"
-    children:
-      - title: "테스트"
-        url: "/test/"
-  - title: "스프링"
-    url: "https://seungryeolpark.github.io/categories/"
-    children:
-      - title: "기초"
-        url: "/spring-base/"
-      - title: "오류"
-        url: "/spring-error/"
+#  - title: "Quick-Start Guide"
+#    url: "https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/"
+#    children:
+#      - title: "테스트"
+#        url: "/test/"
+#  - title: "스프링"
+#    url: "https://seungryeolpark.github.io/categories/"
+#    children:
+#      - title: "기초"
+#        url: "/spring-base/"
+#      - title: "오류"
+#        url: "/spring-error/"
 #  - title: "취업준비"
 #    url: /jobPreparation/
 #   - title: "About"
